Small fix to prevent location dropdown from not aligning. The share button was slightly to high in Chrome, causing the location selection not float next to each other

--- a/app/public/stylesheets/styles.css
+++ b/app/public/stylesheets/styles.css
@@ -394,7 +394,7 @@ nav.dropdown ul li:hover ul { /* Show first level dropdown on hover*/
 /* Dropdown specific styling for share button */
 
 li.share-button {
-  height: 42px;
+  height: 41px;
   padding-bottom: 7px;
 }
 
